tests/baselines/reference/sourceMapValidationDestructuringVariableStatementArrayBindingPattern2(target=es2015).errors.txt
sourceMapValidationDestructuringVariableStatementArrayBindingPattern2.ts(8,5): error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPattern2.ts(9,5): error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPattern2.ts(10,5): error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPattern2.ts(10,14): error TS2488: Type '[string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPattern2.ts(12,5): error TS2488: Type '[string, string[]]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPattern2.ts(13,5): error TS2488: Type '[string, [string, string]]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPattern2.ts(13,15): error TS2488: Type '[string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPattern2.ts(15,5): error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.


==== sourceMapValidationDestructuringVariableStatementArrayBindingPattern2.ts (8 errors) ====
    declare var console: {
        log(msg: string): void;
    }
    type MultiSkilledRobot = [string, [string, string]];
    var multiRobotA: MultiSkilledRobot = ["mower", ["mowing", ""]];
    var multiRobotB: MultiSkilledRobot = ["trimmer", ["trimming", "edging"]];
    
    let [, skillA] = multiRobotA;
        ~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
    let [nameMB] = multiRobotB;
        ~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
    let [nameMA, [primarySkillA, secondarySkillA]] = multiRobotA;
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type '[string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
    
    let [nameMC] = ["roomba", ["vacuum", "mopping"]];
        ~~~~~~~~
!!! error TS2488: Type '[string, string[]]' must have a '[Symbol.iterator]()' method that returns an iterator.
    let [nameMC2, [primarySkillC, secondarySkillC]] = ["roomba", ["vacuum", "mopping"]];
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type '[string, [string, string]]' must have a '[Symbol.iterator]()' method that returns an iterator.
                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type '[string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
    
    let [...multiRobotAInfo] = multiRobotA;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot' must have a '[Symbol.iterator]()' method that returns an iterator.
    
    if (nameMB == nameMA) {
        console.log(skillA[0] + skillA[1]);
    }